# fortuna-computer-base

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  demo.cc  main.cc  vga16_graphics.c  vga16_graphics.h  vga16_graphics_3D_merge_fill.c  vga16_graphics_3D_surface.c  vga16_graphics_demo.c  vga16_graphics_font.c
emulator/: CMakeLists.txt  main.cc
emulator/fortuna/: fortuna.cc
emulator/include/: tusb.h
emulator/vga/: vga.cc
example/: CMakeLists.txt  demo.cc  toshiba_font.hh
firmware/fortuna/: fortuna.hh
firmware/rtc/: rtc.cc  rtc.hh
firmware/usb/: usb.cc  usb.hh
firmware/vga/: font.hh
fortuna/: fortuna.cc  fortuna.hh
schematic/: .gitignore  pi-pico-vga.kicad_prl  pi-pico-vga.kicad_pro  pi-pico-vga.kicad_sch
temp/: keyboard.txt  vga16_graphics.c
usb/: keyboard.cc  keyboard.hh  tusb_config.h  usb.cc  usb.hh
user/: user.cc  user.hh
vga/: fb.cc  fb.hh  fortuna_font.h  ibm_font.h  text.cc  text.hh  vga.cc  vga.hh  vga16_graphics_font.c  vsync.pio
vga/fontgen/: ascii.txt  fontgen.py  fortuna_font.hh  ibm_font.hh
vga/pio/: rgb.pio
